<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
</resources>